feat: Add manuscript image and revisions

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>
                       I completed my degree from Seoul National University with
                       B.S. in materials science in engineering,
-                      <em>summa cum laude</em>, ranked 4th in class of 2022.
+                      <em>Summa Cum laude</em>, ranked 4th in class of 2022.
                     </p>
                     <p>
                       I worked as a software engineer at
@@ -98,12 +98,12 @@
                       synapse array.
                     </p>
                     <p>
-                      From 2024 Fall, I will be joining Prof. Shimeng Yu's
+                      From Fall 2024, I am joining Prof. Shimeng Yu's
                       <a href="https://shimeng.ece.gatech.edu/"
                         >Laboratory for Emerging Devices and Circuits</a
                       >
-                      to study deep learning and probabilistic computing
-                      algorithm and hardware co-design.
+                      as a Ph.D. student to study software-hardware co-design of
+                      neuro-inspired computing and AI hardware design.
                     </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
@@ -176,7 +176,11 @@
               <tbody>
                 <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
-                    <!-- <img src="images/IGZO_XOR.png" width="240" height="100" /> -->
+                    <img
+                      src="images/maxcut_value.png"
+                      width="240"
+                      height="100"
+                    />
                   </td>
                   <td width="75%" valign="middle">
                     Solving Max-Cut Problem using Boltzmann Machine based on
@@ -189,7 +193,11 @@
                     <strong>Seongwon Yoon</strong>, Uicheol Shin, Suyeon Jang,
                     Minki Kim, Sangbum Kim
                     <br />
-                    <em> In Submission(<strong></strong>)</em>, 2023.<br />
+                    <em>
+                      Submitted to
+                      <strong>Nature Communications</strong>(<strong
+                      ></strong>)</em
+                    >, 2023.<br />
 
                     <p>
                       Max-Cut problem solver using the IBM neuromorphic chip
@@ -244,7 +252,8 @@
                       href="https://scholar.google.com/citations?hl=ko&user=6zHzzuMAAAAJ"
                       >Uilyong Lee</a
                     ><br />
-                    <em>In revision (<strong></strong>)</em>, 2023.<br />
+                    <em>Imaging Science in Dentistry (<strong></strong>)</em>,
+                    2024.<br />
 
                     <p>
                       Aimed to evaluate the clinical validity and accuracy of a
