fix: Updated date

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                       Submitted to
                       <strong>Nature Communications</strong>(<strong
                       ></strong>)</em
-                    >, 2023.<br />
+                    >, April 2024.<br />
 
                     <p>
                       Max-Cut problem solver using the IBM neuromorphic chip
