--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
                       <papertitle></papertitle>
                     </a>
                     <br />
-                    Yugyeong Kang, Jaewon Park, Masatoshi Ishii,
-                    <strong>Seongwon Yoon</strong>, Uicheol Shin, Suyeon Jang,
-                    Minki Kim, Sangbum Kim
+                    Yu Gyeong Kang, Masatoshi Ishii, Jaeweon Park, Uicheol Shin,
+                    Suyeon Jang, <strong>Seongwon Yoon</strong>, Mingi Kim,
+                    Atsuya Okazaki, Megumi Ito, Akiyo Nomura, Kohji Hosokawa,
+                    Matthew Brightsky, Sangbum Kim
                     <br />
                     <em>
                       Submitted to
