fix: Fix Grammar

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                       models.
                     </p>
                     <p>
-                      From 2019 to present, I am fortunate to get an opportunity
-                      to work under the guidance of
+                      From 2019 to present, I am working under the guidance of
                       <a href="https://research.ibm.com/people/masatoshi-ishii"
                         >Mr. Masatoshi Ishii</a
                       >
