add: Added author citations

--- a/index.html
+++ b/index.html
@@ -188,10 +188,43 @@
                       <papertitle></papertitle>
                     </a>
                     <br />
-                    Yu Gyeong Kang, Masatoshi Ishii, Jaeweon Park, Uicheol Shin,
-                    Suyeon Jang, <strong>Seongwon Yoon</strong>, Mingi Kim,
-                    Atsuya Okazaki, Megumi Ito, Akiyo Nomura, Kohji Hosokawa,
-                    Matthew Brightsky, Sangbum Kim
+                    Yu Gyeong Kang,
+                    <a
+                      href="https://scholar.google.co.jp/citations?user=zQqKuIaEAAAAJ&hl=ja"
+                      >Masatoshi Ishii</a
+                    >, Jaeweon Park,
+                    <a
+                      href="https://scholar.google.com/citations?user=wovcZXoAAAAJ&hl=ko"
+                      >Uicheol Shin</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?user=LAfZDw0AAAAJ&hl=ko"
+                      >Suyeon Jang</a
+                    >, <strong>Seongwon Yoon</strong>, Mingi Kim,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=56lPc1MAAAAJ"
+                      >Atsuya Okazaki</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=R1tkA7EAAAAJ"
+                      >Megumi Ito</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=6_QUxPQAAAAJ"
+                      >Akiyo Nomura</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?user=Gbugs-MAAAAJ&hl=ja"
+                      >Kohji Hosokawa</a
+                    >,
+                    <a
+                      href="https://www.researchgate.net/scientific-contributions/Matthew-BrightSky-2120881941"
+                      >Matthew Brightsky</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?user=pkF_3SYAAAAJ&hl=ko"
+                      >Sangbum Kim</a
+                    >
                     <br />
                     <em>
                       Submitted to
