fix: Bolded journal name

--- a/index.html
+++ b/index.html
@@ -182,8 +182,10 @@
                     />
                   </td>
                   <td width="75%" valign="middle">
-                    Solving Max-Cut Problem using Boltzmann Machine based on
-                    Phase Change Memory
+                    <strong
+                      >Solving Max-Cut Problem using Boltzmann Machine based on
+                      Phase Change Memory</strong
+                    >
                     <a href="data/AnyDA_2022.pdf">
                       <papertitle></papertitle>
                     </a>
@@ -261,9 +263,11 @@
                     />
                   </td>
                   <td width="75%" valign="middle">
-                    Clinical validity and precision of deep learning-based
-                    Cone-Beam Computed Tomography automatic landmarking
-                    algorithm
+                    <strong
+                      >Clinical validity and precision of deep learning-based
+                      Cone-Beam Computed Tomography automatic landmarking
+                      algorithm</strong
+                    >
                     <a href="data/AnyDA_2022.pdf">
                       <papertitle></papertitle>
                     </a>
@@ -321,9 +325,11 @@
                     <img src="images/SNN-TSP.png" width="100" height="100" />
                   </td>
                   <td width="75%" valign="middle">
-                    Solving Constraint Satisfaction Problem with Spiking Neural
-                    Network based on 1.4M 6T2R PCM Synaptic Array with 1.6K
-                    Stochastic LIF Neurons Neuromorphic Hardware
+                    <strong
+                      >Solving Constraint Satisfaction Problem with Spiking
+                      Neural Network based on 1.4M 6T2R PCM Synaptic Array with
+                      1.6K Stochastic LIF Neurons Neuromorphic Hardware</strong
+                    >
                     <a href="data/KCS2021.pdf">
                       <papertitle></papertitle>
                     </a>
