--- a/index.html
+++ b/index.html
@@ -152,10 +152,8 @@
                   >
                     <h2>Research</h2>
                     <p>
-                      My research interest lies in semiconductor physics, along
-                      with the application of electronic materials, such as
-                      phase-change materials (GST) and metal oxides (Indium
-                      Gallium Zinc Oxide), in computing devices and algorithms.
+                      My research interests include software-hardware co-design
+                      for neuro-inspired computing and AI hardware design.
                     </p>
                   </td>
                 </tr>
