fix: Add GT ECE homepage

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                       <a href="https://shimeng.ece.gatech.edu/"
                         >Laboratory for Emerging Devices and Circuits</a
                       >
-                      as a Ph.D. student to study software-hardware co-design of
+                      as a
+                      <a href="https://ece.gatech.edu/">Georgia Tech ECE</a>
+                      Ph.D. student to study software-hardware co-design of
                       neuro-inspired computing and AI hardware design.
                     </p>
                     <p style="text-align: center">
@@ -153,7 +155,8 @@
                     <h2>Research</h2>
                     <p>
                       My research interests include software-hardware co-design
-                      for neuro-inspired computing and AI hardware design.
+                      for neuro-inspired computing and AI hardware design, with
+                      a particular focus on training and inference accelerators.
                     </p>
                   </td>
                 </tr>
