change: changed the current status

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                       synapse array.
                     </p>
                     <p>
-                      From Fall 2024, I am joining Prof. Shimeng Yu's
+                      From Fall 2024, I am a
+                      <a href="https://ece.gatech.edu/">Georgia Tech ECE</a>
+                      Ph.D. student in Prof. Shimeng Yu's
                       <a href="https://shimeng.ece.gatech.edu/"
                         >Laboratory for Emerging Devices and Circuits</a
                       >
-                      as a
-                      <a href="https://ece.gatech.edu/">Georgia Tech ECE</a>
-                      Ph.D. student to study software-hardware co-design of
-                      neuro-inspired computing and AI hardware design.
+                      . I am currently involved in in-pixel circuit design of
+                      CMOS image sensor.
                     </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
@@ -230,10 +230,9 @@
                     >
                     <br />
                     <em>
-                      Submitted to
-                      <strong>Nature Communications</strong>(<strong
-                      ></strong>)</em
-                    >, April 2024.<br />
+                      In revision in
+                      <strong>Advanced Science</strong>(<strong></strong>)</em
+                    >, Aug 2024.<br />
 
                     <p>
                       Max-Cut problem solver using the IBM neuromorphic chip
